--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ task run(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 
+task cmdlinerun(type: JavaExec){
+    main = "ui.commandline.Main"
+    classpath = sourceSets.main.runtimeClasspath
+}
+
 task gradleHome << {
     println gradle.gradleHomeDir
 }
